--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
     </div>
 
     <p class="message js-msg">Vamos a Jugar!</p>
+    <p class="js-playerCount"></p>
+    <p class="js-computerCount"></p>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
